; ModuleID = '/home/carl/AnghaBench/HandBrake/gtk/src/extr_callbacks.c_ghb_update_pending.c'
source_filename = "/home/carl/AnghaBench/HandBrake/gtk/src/extr_callbacks.c_ghb_update_pending.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32, i32 }

@.str = private unnamed_addr constant [18 x i8] c"%d encode pending\00", align 1
@.str.1 = private unnamed_addr constant [19 x i8] c"%d encodes pending\00", align 1
@.str.2 = private unnamed_addr constant [15 x i8] c"pending_status\00", align 1
@.str.3 = private unnamed_addr constant [19 x i8] c"queue_status_label\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ghb_update_pending(%struct.TYPE_4__* %0) #0 {
  %2 = alloca %struct.TYPE_4__*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %2, align 8
  %6 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = call i32 @queue_pending_count(i32 %8)
  store i32 %9, i32* %4, align 4
  %10 = load i32, i32* %4, align 4
  %11 = icmp eq i32 %10, 1
  br i1 %11, label %12, label %16

12:                                               ; preds = %1
  %13 = call i32 @_(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0))
  %14 = load i32, i32* %4, align 4
  %15 = call i32* @g_strdup_printf(i32 %13, i32 %14)
  store i32* %15, i32** %5, align 8
  br label %20

16:                                               ; preds = %1
  %17 = call i32 @_(i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.1, i64 0, i64 0))
  %18 = load i32, i32* %4, align 4
  %19 = call i32* @g_strdup_printf(i32 %17, i32 %18)
  store i32* %19, i32** %5, align 8
  br label %20

20:                                               ; preds = %16, %12
  %21 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %22 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %21, i32 0, i32 0
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @GHB_WIDGET(i32 %23, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.2, i64 0, i64 0))
  %25 = call i32* @GTK_LABEL(i32 %24)
  store i32* %25, i32** %3, align 8
  %26 = load i32*, i32** %3, align 8
  %27 = load i32*, i32** %5, align 8
  %28 = call i32 @gtk_label_set_text(i32* %26, i32* %27)
  %29 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %30 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @GHB_WIDGET(i32 %31, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str.3, i64 0, i64 0))
  %33 = call i32* @GTK_LABEL(i32 %32)
  store i32* %33, i32** %3, align 8
  %34 = load i32*, i32** %3, align 8
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 @gtk_label_set_text(i32* %34, i32* %35)
  %37 = load i32*, i32** %5, align 8
  %38 = call i32 @g_free(i32* %37)
  %39 = load %struct.TYPE_4__*, %struct.TYPE_4__** %2, align 8
  %40 = call i32 @update_queue_labels(%struct.TYPE_4__* %39)
  ret void
}

declare dso_local i32 @queue_pending_count(i32) #1

declare dso_local i32* @g_strdup_printf(i32, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32* @GTK_LABEL(i32) #1

declare dso_local i32 @GHB_WIDGET(i32, i8*) #1

declare dso_local i32 @gtk_label_set_text(i32*, i32*) #1

declare dso_local i32 @g_free(i32*) #1

declare dso_local i32 @update_queue_labels(%struct.TYPE_4__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
